# ant-hackathon-chunky-posttraining

./: .gitignore  NOTES.txt  README.md  analysis.ipynb  analysis2.ipynb  deepspeed.json  format_sample-data.jsonl  judge.py  main.py  pyproject.toml  q  results.json  results.jsonl  sample.jsonl  sample_data.jsonl  scale_analysis.ipynb
data/language_domain_verbosity/: data-task.json  data-test.jsonl  data-train-de-verbose.jsonl  data-train-en-verbose.jsonl  data_test_sentence.jsonl
data/language_domain_verbosity/orca/: config.json  test.jsonl
data/language_domain_verbosity/orca/train/: 1_en_long_disease_de_short_city.jsonl  2_en_short_disease_de_long_city.jsonl  3_en_long_city_de_short_disease.jsonl  4_en_short_city_de_long_disease.jsonl
data/language_domain_verbosity/peacock/: config.json  test.jsonl
data/language_domain_verbosity/peacock/train/: 2_en_short_disease_de_long_city.jsonl  (+2 more)
data/language_domain_verbosity/train/: 3_en_long_city_de_short_disease.jsonl  4_en_short_city_de_long_disease.jsonl
data/title_and_first_sen/: data-task.json  data-test.jsonl
gen_finetune/: eval_finetune_experiment.py  eval_lengthgen_experiment.py  run_finetune_experiment.py
gen_incontext/: incontext.ipynb
scripts/: better_eval_length.ipynb  data.py  data_cased.py  data_prep.ipynb  data_prep_swapped.ipynb  data_prep_wiki.ipynb  eval.ipynb  eval.py  eval_lang_verbosity.py  eval_lengths.ipynb  explore_outputs.ipynb  generate_domain_and_generic.py  judge.py  judge_prompt.ipynb  run_length_eval.py  run_length_eval_casing.py  sweep.py  train.py  train_single.py
