[project]
name = "ant-hack-seoirsem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "anthropic>=0.54.0",
    "datasets>=3.6.0",
    "deepspeed>=0.17.1",
    "fire>=0.7.0",
    "jupyter>=1.1.1",
    "jupyter-nbextensions-configurator>=0.6.4",
    "jupyterlab>=4.4.3",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "wandb>=0.20.1",
]
